--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,4 +14,12 @@ code {
 }
 /* Define colors and other custom variables */
 /* Define Utility Classes */
+.full-width {
+  width: 100%;
+}
 /* Define Base Layouts */
+.container {
+  margin-inline: auto;
+  padding: 1rem;
+  border: 1px solid #333;
+}
