--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,13 @@ code {
   padding: 1rem;
   border: 1px solid #333;
 }
+
+.btn {
+  border-radius: 1rem;
+  padding: 1rem;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #333;
+  color: #fff;
+}
