--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -3,3 +3,9 @@
   grid-template-columns: 1fr 3fr;
   margin-top: 2rem;
 }
+.login {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  place-content: center;
+}
