--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,8 +1,58 @@
+.dashboard {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  width: 100%;
+  min-height: 80vh;
+  border: 4px solid #333;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.dashboard > * {
+  display: flex;
+  flex-direction: column;
+}
 .editor {
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  width: 100%;
+  grid-template-columns: 0.25fr 0.75fr;
+  justify-content: space-between;
+}
+.editor-fields {
+  max-width: 100%;
+  gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 1rem;
+}
+
+.editor-preview {
+  max-width: 100%;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 1rem;
+  line-height: 1.5;
+  gap: 0.5rem;
+}
+
+.textarea {
+  width: 100%;
+  min-height: 500px;
+}
+.editor label {
+  width: 100%;
+}
+.editor input {
+  width: 100%;
+}
+/*
+.editor {
+  display: grid;
+  grid-template-columns: minmax(550px, 1fr) 5fr;
   /* place-content: start center;
-  place-items: center; */
+  place-items: center; 
   min-height: 80vh;
   padding: 1rem;
 }
@@ -22,4 +72,4 @@
 .editor-fields textarea {
   width: 500px;
   min-height: 500px;
-}
+} */
