--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: var(--main-text-color);
 }
 
 body {
@@ -19,6 +20,12 @@ code {
     monospace;
 }
 /* Define colors and other custom variables */
+:root {
+  --main-text-color: #333;
+  --nav-bg: #666666ff;
+  --active: tomato;
+}
+
 /* Define Utility Classes */
 .full-width {
   width: 100%;
