--- a/client/src/styles/Auth.css
+++ b/client/src/styles/Auth.css
@@ -1,8 +1,23 @@
-.login-form {
+.login-outer {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding: 1rem;
+}
+
+.login-container {
+  background-color: var(--medium-color);
+  min-height: 80vh;
   display: grid;
   place-content: center;
-  min-height: 80vh;
+}
+.login-form {
+  display: grid;
+  padding: 2.5rem;
+  background-color: var(--light-color);
   gap: 1rem;
+  border-radius: 5px;
   text-align: center;
 }
 .login-form label {
@@ -15,4 +30,5 @@
 .login-form input {
   padding: 0.5rem;
   border-radius: 5px;
+  color: var(--dark-text);
 }
