--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
   background: var(--medium-color);
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr;
   width: 100%;
   min-height: 80vh;
   border: 1px solid var(--light-color);
@@ -17,8 +17,11 @@
   background-color: var(--light-color);
   display: grid;
   width: 100%;
-  grid-template-columns: 0.35fr 0.65fr;
+  grid-template-columns: 1fr;
   justify-content: space-between;
+}
+.editor-not-mobile {
+  grid-template-columns: 0.35fr 0.65fr;
 }
 .editor-fields {
   max-width: 100%;
@@ -59,6 +62,12 @@
   padding: 0.5rem;
   border-radius: 5px;
   font-weight: 700;
+}
+
+@media (min-width: 768px) {
+  .dashboard {
+    grid-template-columns: 1fr 3fr;
+  }
 }
 /*
 .editor {
