--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,9 +1,9 @@
 .header {
+  display: flex;
   padding: 1rem;
   background-color: var(--light-color);
   overflow: scroll;
 }
-
 .navlink {
   text-decoration: none;
   color: var(--light-text);
@@ -16,3 +16,12 @@
 .navlink.active {
   border-right: 5px solid var(--accent-color);
 }
+
+/* @media (min-width: 750px) {
+  .header {
+    display: flex;
+    padding: 1rem;
+    background-color: var(--light-color);
+    overflow: scroll;
+  }
+} */
