--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -20,9 +20,6 @@
   grid-template-columns: 1fr;
   justify-content: space-between;
 }
-.editor-not-mobile {
-  grid-template-columns: 0.35fr 0.65fr;
-}
 .editor-fields {
   max-width: 100%;
   gap: 2rem;
@@ -67,6 +64,9 @@
 @media (min-width: 768px) {
   .dashboard {
     grid-template-columns: 1fr 3fr;
+  }
+  .editor {
+    grid-template-columns: 0.35fr 0.65fr;
   }
 }
 /*
