--- a/client/src/styles/Auth.css
+++ b/client/src/styles/Auth.css
@@ -1,7 +1,7 @@
 .login-outer {
   display: grid;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   align-items: center;
   padding: 1rem;
 }
