--- a/client/src/styles/Auth.css
+++ b/client/src/styles/Auth.css
@@ -1,7 +1,11 @@
 .login-outer {
   display: grid;
+  background-color: var(--medium-color);
+  max-width: 100%;
   width: 100vw;
   height: 100vh;
+  margin: auto;
+  justify-content: center;
   align-items: center;
   padding: 1rem;
 }
